# queued_animated_sprites_macroquad

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
src/animated_sprite/: animated_sprite.rs  animation.rs  internal_effects_state.rs  mod.rs
src/effects/: custom_effect.rs  effect.rs  effect_helper_types.rs  mod.rs
