[package]
name = "queued_animated_sprites_macroquad"
version = "0.1.0"
edition = "2021"
description = "Macroquad animated sprite drawing library focused around a queue-based design"
license = "MIT"
keywords = ["macroquad", "sprites", "animated sprites", "animations", "game dev"]


[dependencies]
glam = "0.27.0"
macroquad = "0.4.11"
serde = { version = "1.0.23", features = ["derive"] }
serde_json = "1.0.23"


[features]
custom_effects = []